# connexion-faker

./: .gitignore  LICENSE  PUBLISHING.MD  README.md  pyproject.toml
.github/workflows/: release.yml
connexion_faker/: aiohttp.py  base.py  django.py
tests/: openapi.yml  test_aiohttp.py
tests/aiohttp/: test_aiohttp.py
tests/base/: swagger.yaml  test_base.py
tests/django/: pytest.ini  test_django.py
tests/django/testapp/: settings.py  urls.py
