[tool.poetry]
name = "connexion-faker"
version = "0.3.0"
description = "Auto-generate mocks from your Connexion API using OpenAPI"
authors = ["Erle Carrara <carrara.erle@gmail.com>"]
repository = "https://github.com/buserbrasil/connexion-faker"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
connexion = "^2.9.0"
Faker = "*"
aiohttp = {version = "^3.0", optional = true}
aiohttp_jinja2 = {version = "^1.0", optional = true}
Django = {version = "^4.0.2", optional = true}
django-connexion = {version = "^0", optional = true}

[tool.poetry.extras]
aiohttp = ["aiohttp", "aiohttp_jinja2"]
django = ["Django", "django-connexion"]

[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"
pytest-aiohttp = "*"
pytest-django = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
